added reset button

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     </head>
     <body>
         <h1>Log In</h1>
+        <button id="resetButton">Reset</button><br><br>
         <form method="POST" action="/submitForm" id="passwordForm">
             <input type="text"   name="password"   id="password"  />
             <input type="hidden" name="data"       id="data"      />
