added autofocus for page redirect

--- a/public/setup.html
+++ b/public/setup.html
@@ -68,7 +68,7 @@
             <h1>Set Up Account</h1>
             <form method="POST" action="/setUpAccount" id="passwordForm">
                 <button type="button" id="resetButton">Reset</button>
-                <input type="text"   name="password"   id="password"  />
+                <input type="text"   name="password"   id="password"  autofocus/>
                 <input type="hidden" name="data"       id="data"      />
                 <button type="button" id="submitButton">Submit</button>
             </form>
